[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.7.1"
reqwest = "0.11.13"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = "1.24.1"
